# benchmark-exchange

./: .dockerignore  .gcloudignore  .gitignore  BENCHMARK_COMPLIANCE_REPORT.md  Cargo.toml  DEPENDENCIES.md  Makefile  README.md  cloudbuild-simple.yaml  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  index.js  package.json  sqlx.toml  test.js
.github/workflows/: cd.yml  ci.yml
.swarm/: state.json
benchmarks/output/: summary.md
crates/api-grpc/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
crates/api-grpc/examples/: client.rs  server.rs
crates/api-grpc/proto/: benchmark.proto  governance.proto  leaderboard.proto  submission.proto  user.proto
crates/api-grpc/src/: error.rs  lib.rs  server.rs  services.rs
crates/api-grpc/src/conversions/: mod.rs
crates/api-grpc/src/interceptors/: auth.rs  execution.rs  logging.rs  metrics.rs  mod.rs
crates/api-grpc/src/services/: benchmark.rs  governance.rs  leaderboard.rs  submission.rs  user.rs
crates/api-grpc/tests/: integration_test.rs
crates/api-rest/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/api-rest/examples/: api_examples.md  simple_server.rs
crates/api-rest/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
crates/api-rest/src/extractors/: auth.rs  execution.rs  mod.rs  pagination.rs  validated_json.rs
crates/api-rest/src/middleware/: error_handler.rs  execution.rs  logging.rs  rate_limit.rs  request_id.rs
crates/api-rest/src/responses/: mod.rs
crates/api-rest/src/routes/: health.rs
crates/api-rest/src/routes/v1/: benchmarks.rs  governance.rs  leaderboards.rs  mod.rs  publications.rs  submissions.rs  users.rs
crates/api-rest/tests/: integration_tests.rs
crates/application/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md
crates/application/src/: lib.rs
crates/application/src/dto/: benchmark.rs  common.rs  mod.rs  submission.rs  user.rs
crates/application/src/scoring/: engine.rs  evaluators.rs  mod.rs
crates/application/src/services/: benchmark.rs  mod.rs  organization.rs  publication.rs  submission.rs  user.rs
crates/application/src/validation/: benchmark.rs  common.rs  mod.rs  submission.rs  user.rs
crates/application/tests/: benchmark_service_tests.rs  scoring_tests.rs  submission_service_tests.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: io.rs  lib.rs  markdown.rs  mod.rs  result.rs
crates/benchmarks/src/adapters/: mod.rs  targets.rs
crates/cli/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/cli/src/: client.rs  config.rs  interactive.rs  lib.rs  main.rs
crates/cli/src/commands/: auth.rs  benchmark.rs  init.rs  leaderboard.rs  mod.rs  proposal.rs  publication.rs  run.rs  submit.rs
crates/cli/src/output/: formatters.rs  mod.rs  table.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  datetime.rs  execution.rs  lib.rs  pagination.rs  retry.rs  serialization.rs  telemetry.rs  validation.rs
crates/domain/: Cargo.toml
crates/domain/src/: benchmark.rs  errors.rs  evaluation.rs  events.rs  governance.rs  identifiers.rs  lib.rs  publication.rs  submission.rs  test_case.rs  user.rs  validation.rs  version.rs
crates/domain/tests/: status_tests.rs  version_tests.rs
crates/infrastructure/: Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md
crates/infrastructure/src/: cache.rs  database.rs  lib.rs  messaging.rs  storage.rs
crates/infrastructure/src/external_consumers/: marketplace.rs  mod.rs  observatory.rs  registry.rs  ruvector.rs  testbench.rs
crates/infrastructure/src/repositories/: benchmark_repository.rs  mod.rs  organization_repository.rs  submission_repository.rs  user_repository.rs
crates/infrastructure/tests/: repository_tests.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: client.rs  config.rs  error.rs  lib.rs  models.rs
crates/sdk/src/services/: benchmark.rs  governance.rs  leaderboard.rs  mod.rs  submission.rs
crates/testing/: Cargo.toml
crates/testing/src/: builders.rs  database.rs  fixtures.rs  lib.rs  mocks.rs  testcontainers_ext.rs
crates/worker/: Cargo.toml  QUICK_START.md  README.md  config.example.json  llm-benchmark-worker.service
crates/worker/src/: config.rs  lib.rs  main.rs  metrics.rs
crates/worker/src/queue/: consumer.rs  job.rs  mod.rs  producer.rs
crates/worker/src/scheduler/: mod.rs
crates/worker/src/workers/: cleanup.rs  governance.rs  leaderboard.rs  mod.rs  notification.rs  sync.rs  verification.rs
deploy/: CLI_ACTIVATION.md  FAILURE_MODES.md  PERSISTENCE_WIRING.md  SERVICE_TOPOLOGY.md  VERIFICATION_CHECKLIST.md
deploy/cloudrun/: Dockerfile  Dockerfile.simple  service.yaml
deploy/cloudrun/simple-api/: Cargo.toml
deploy/cloudrun/simple-api/src/: main.rs
deploy/config/: env.dev.yaml  env.prod.yaml  env.staging.yaml
deploy/scripts/: deploy.sh  rollback.sh  setup-iam.sh
docker/: Dockerfile  Dockerfile.worker
docs/agents/: benchmark-publication-agent.md
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-service.yaml  api-serviceaccount.yaml  configmap.yaml  secrets.yaml
k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secrets.yaml  service.yaml
k8s/jobs/: migration-job.yaml
migrations/: 00001_initial_setup.sql  00002_users_organizations.sql  00003_benchmarks.sql  00004_test_cases.sql  00005_submissions.sql  00006_verifications.sql  00007_governance.sql  00008_events_audit.sql  00009_materialized_views.sql  00010_functions.sql  CHECKLIST.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  run_migrations.sh  validate_schema.sql
