[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/common",
    "crates/infrastructure",
    "crates/application",
    "crates/api-rest",
    "crates/api-grpc",
    "crates/worker",
    "crates/cli",
    "crates/sdk",
    "crates/testing",
    "crates/benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM Benchmark Exchange Team"]
license = "MIT"
repository = "https://github.com/llm-benchmark-exchange/llm-benchmark-exchange"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web frameworks
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "timeout"] }

# gRPC
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Cache
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "aio"] }

# Cloud storage
aws-sdk-s3 = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Configuration
config = "0.14"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
proptest = "1.4"
testcontainers = "0.15"
wiremock = "0.5"

# Utilities
regex = "1.10"
url = { version = "2.5", features = ["serde"] }
bytes = "1.5"
parking_lot = "0.12"

# LLM-Dev-Ops External Dependencies
# LLM-Registry - Model and asset registry services
llm-registry-core = { git = "https://github.com/LLM-Dev-Ops/registry", version = "0.1" }
llm-registry-service = { git = "https://github.com/LLM-Dev-Ops/registry", version = "0.1" }
llm-registry-api = { git = "https://github.com/LLM-Dev-Ops/registry", version = "0.1" }

# LLM-Observatory - Observability and monitoring platform
llm-observatory-core = { git = "https://github.com/LLM-Dev-Ops/observatory", version = "0.1.1" }
llm-observatory-sdk = { git = "https://github.com/LLM-Dev-Ops/observatory", version = "0.1.1" }
llm-observatory-collector = { git = "https://github.com/LLM-Dev-Ops/observatory", version = "0.1.1" }

# Internal crates
llm-benchmark-domain = { path = "crates/domain" }
llm-benchmark-common = { path = "crates/common" }
llm-benchmark-infrastructure = { path = "crates/infrastructure" }
llm-benchmark-application = { path = "crates/application" }
llm-benchmark-api-rest = { path = "crates/api-rest" }
llm-benchmark-api-grpc = { path = "crates/api-grpc" }
llm-benchmark-worker = { path = "crates/worker" }
llm-benchmark-cli = { path = "crates/cli" }
llm-benchmark-sdk = { path = "crates/sdk" }
llm-benchmark-testing = { path = "crates/testing" }
llm-benchmark-benchmarks = { path = "crates/benchmarks" }
