[package]
name = "llm-benchmark-api-rest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
llm-benchmark-domain = { workspace = true }
llm-benchmark-common = { workspace = true }
llm-benchmark-application = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Validation
validator = { workspace = true }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"

# OpenAPI documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# HTTP types
http = "1.0"
http-body-util = "0.1"

# Utilities
futures = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
rand = "0.8"

[dev-dependencies]
llm-benchmark-testing = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
