[package]
name = "llm-benchmark-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Canonical benchmark interface for LLM Benchmark Exchange"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal crates
llm-benchmark-domain = { workspace = true }
llm-benchmark-common = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
