[package]
name = "llm-benchmark-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "llm-benchmark"
path = "src/main.rs"

[dependencies]
# Internal dependencies
llm-benchmark-domain = { workspace = true }
llm-benchmark-common = { workspace = true }
llm-benchmark-application = { workspace = true }
llm-benchmark-infrastructure = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = "4.4"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Terminal UI
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"
dialoguer = "0.11"

# Configuration
toml = "0.8"
dirs = "5.0"

# YAML support
serde_yaml = "0.9"

# Utilities
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
