[package]
name = "llm-benchmark-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
llm-benchmark-domain = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
tracing-opentelemetry = "0.22"

# Metrics
opentelemetry-prometheus = "0.14"
prometheus = "0.13"

# Configuration
config = { workspace = true }

# Cryptography
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Validation
regex = "1.10"
validator = { version = "0.18", features = ["derive"] }

# Utilities
bytes = { workspace = true }
parking_lot = { workspace = true }
once_cell = "1.19"
num_cpus = "1.16"

[dev-dependencies]
fake = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
