[package]
name = "llm-benchmark-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Validation
validator = { workspace = true }

# Utilities
regex = { workspace = true }
url = { workspace = true }

# Collections
indexmap = { version = "2.1", features = ["serde"] }

[dev-dependencies]
fake = { workspace = true }
proptest = { workspace = true }
