[package]
name = "llm-benchmark-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["infra-integration"]
# Phase 2B: Use LLM-Infra modules for caching, rate limiting, and client abstractions
infra-integration = []
# Legacy mode: Use local implementations (deprecated, will be removed in v0.3)
legacy-local = []

[dependencies]
# Internal dependencies
llm-benchmark-domain = { workspace = true }
llm-benchmark-common = { workspace = true }

# LLM-Infra Integration (Phase 2B)
# Caching layer with Redis and in-memory support
llm-infra-cache = { workspace = true }
# Rate limiting with sliding window algorithm
llm-infra-ratelimit = { workspace = true }
# HTTP and gRPC client abstractions
llm-infra-client = { workspace = true }
# Core infrastructure utilities
llm-infra-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Cache
redis = { workspace = true }

# Cloud storage
aws-sdk-s3 = { workspace = true }
aws-config = "1.0"

# Configuration
config = { workspace = true }

# Utilities
futures = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }

# CSV parsing for Test-Bench ingestion (runtime only, no LLM-Test-Bench dependency)
csv = "1.3"

[dev-dependencies]
llm-benchmark-testing = { workspace = true }
fake = { workspace = true }
proptest = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
