[package]
name = "llm-benchmark-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Official Rust SDK for the LLM Benchmark Exchange API"
keywords = ["llm", "benchmark", "ai", "evaluation", "sdk"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
blocking = ["reqwest/blocking"]

[dependencies]
# Internal dependencies
llm-benchmark-domain = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream"] }

# Utilities
url = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }
